--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -42,8 +42,8 @@
     Workout Added Successfully!
   </div>
   <script src="/api.js"></script>
-  <script src="/workout.js"></script>
-  <script src="/index.js"></script>
+  <script src="/Workout.js"></script>
+  
 </body>
 
 </html>
