--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     Workout Added Successfully!
   </div>
   <script src="/api.js"></script>
-  <script src="/Workout.js"></script>
+  <script src="/workout.js"></script>
   
 </body>
 
